--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,103 +28,49 @@
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <section class="mb-8" data-no-card="true">
-                <div class="relative overflow-hidden rounded-3xl bg-gradient-to-br from-slate-950 via-indigo-700 to-sky-600 text-white shadow-2xl">
-                    <div class="absolute -top-24 -left-16 h-64 w-64 rounded-full bg-white/10 blur-3xl"></div>
-                    <div class="absolute -bottom-16 -right-10 h-56 w-56 rounded-full bg-white/10 blur-3xl"></div>
-                    <div class="relative grid gap-12 p-8 md:grid-cols-2 md:p-12 items-center">
-                        <div class="flex flex-col space-y-6">
-                            <span class="inline-flex items-center gap-2 self-start rounded-full border border-white/30 bg-white/10 px-4 py-1 text-xs font-semibold uppercase tracking-widest text-indigo-100">
-                                <i class="fas fa-star text-indigo-100" aria-hidden="true"></i>
-                                Finance intelligence at a glance
+                <div class="rounded-3xl bg-slate-900 text-white shadow-xl">
+                    <div class="grid gap-8 p-8 md:grid-cols-2 md:p-10 items-start">
+                        <div class="space-y-5">
+                            <span class="inline-flex items-center gap-2 self-start rounded-full border border-slate-700 bg-slate-800 px-4 py-1 text-xs font-semibold uppercase tracking-widest text-slate-200">
+                                <i class="fas fa-shield-alt text-slate-200" aria-hidden="true"></i>
+                                Financial operations overview
                             </span>
-                            <h1 class="text-4xl font-semibold leading-tight md:text-5xl">Command your cashflow with clarity in <span id="landing-site-name">Finance Manager</span></h1>
-                            <p class="text-lg text-indigo-100">Transform every transaction into insight. Finance Manager unifies accounts, budgets and forecasts so you can react fast, stay compliant and keep every £ working towards your goals.</p>
+                            <h1 class="text-4xl font-semibold leading-tight md:text-5xl">Operational visibility for <span id="landing-site-name">Finance Manager</span></h1>
+                            <p class="text-base text-slate-200">Track account activity, reconcile imports, and review reporting in one place. The platform is designed for consistent financial controls and clear audit trails.</p>
                             <div class="flex flex-wrap gap-3">
-                                <a href="upload.html" class="inline-flex items-center justify-center rounded-full bg-white px-6 py-3 text-base font-semibold text-indigo-700 shadow-lg transition hover:-translate-y-0.5 hover:bg-indigo-50" aria-label="Get started by uploading transactions">
-                                    Get Started
+                                <a href="upload.html" class="inline-flex items-center justify-center rounded-full bg-white px-6 py-3 text-base font-semibold text-slate-900 shadow transition hover:bg-slate-100" aria-label="Upload transactions">
+                                    Upload Transactions
                                 </a>
-                                <a href="monthly_dashboard.html" class="inline-flex items-center justify-center rounded-full border border-white/60 bg-white/10 px-6 py-3 text-base font-semibold text-white transition hover:-translate-y-0.5 hover:bg-white/20" aria-label="View dashboards">
-                                    Explore Dashboards
-                                </a>
-                                <a href="projects_board.html" class="inline-flex items-center justify-center rounded-full bg-indigo-900/40 px-6 py-3 text-base font-semibold text-white shadow-inner transition hover:-translate-y-0.5 hover:bg-indigo-900/60" aria-label="Open the projects board">
-                                    View Projects
+                                <a href="monthly_dashboard.html" class="inline-flex items-center justify-center rounded-full border border-slate-400 bg-transparent px-6 py-3 text-base font-semibold text-white transition hover:bg-slate-800" aria-label="View financial dashboards">
+                                    View Dashboard
                                 </a>
                             </div>
-                            <dl class="grid grid-cols-1 gap-4 pt-6 text-left sm:grid-cols-3">
-                                <div class="rounded-2xl bg-white/10 p-4 shadow-lg">
-                                    <dt class="text-xs font-semibold uppercase tracking-wide text-indigo-100">Accounts tracked</dt>
-                                    <dd id="landing-stat-accounts" class="mt-1 text-3xl font-semibold" aria-live="polite">0</dd>
-                                    <dd class="mt-1 text-sm text-indigo-100 opacity-80">Connected to your workspace</dd>
-                                </div>
-                                <div class="rounded-2xl bg-white/10 p-4 shadow-lg">
-                                    <dt class="text-xs font-semibold uppercase tracking-wide text-indigo-100">Transactions recorded</dt>
-                                    <dd id="landing-stat-transactions" class="mt-1 text-3xl font-semibold" aria-live="polite">0</dd>
-                                    <dd class="mt-1 text-sm text-indigo-100 opacity-80">Updated as you import</dd>
-                                </div>
-                                <div class="rounded-2xl bg-white/10 p-4 shadow-lg">
-                                    <dt class="text-xs font-semibold uppercase tracking-wide text-indigo-100">Tags available</dt>
-                                    <dd id="landing-stat-tags" class="mt-1 text-3xl font-semibold" aria-live="polite">0</dd>
-                                    <dd class="mt-1 text-sm text-indigo-100 opacity-80">Helping categorise spend</dd>
-                                </div>
-                            </dl>
                         </div>
-                        <div class="relative">
-                            <div class="absolute -top-10 -left-10 h-32 w-32 rounded-full bg-white/10 blur-3xl"></div>
-                            <div class="relative overflow-hidden rounded-3xl border border-white/30 bg-white/10 shadow-2xl">
-                                <div id="landing-carousel" class="relative h-72 w-full md:h-[28rem]">
-                                    <img src="https://images.unsplash.com/photo-1556740749-887f6717d7e4?auto=format&fit=crop&w=1200&q=80" alt="Financial analyst reviewing data on a laptop" class="absolute inset-0 h-full w-full object-cover transition-all duration-700 opacity-100 translate-x-0">
-                                    <img src="https://images.unsplash.com/photo-1520607162513-77705c0f0d4a?auto=format&fit=crop&w=1200&q=80" alt="Team collaborating over financial charts" class="absolute inset-0 h-full w-full object-cover transition-all duration-700 opacity-0 translate-x-full">
-                                    <img src="https://images.unsplash.com/photo-1525182008055-f88b95ff7980?auto=format&fit=crop&w=1200&q=80" alt="Close-up of hands working on investment documents" class="absolute inset-0 h-full w-full object-cover transition-all duration-700 opacity-0 translate-x-full">
-                                </div>
-                                <div class="absolute inset-x-0 bottom-0 space-y-3 bg-gradient-to-t from-slate-950/80 via-slate-900/40 to-transparent p-6">
-                                    <div class="flex items-center gap-3">
-                                        <span class="inline-flex h-11 w-11 items-center justify-center rounded-full bg-white/10">
-                                            <i class="fas fa-shield-alt text-lg text-white" aria-hidden="true"></i>
-                                        </span>
-                                        <div>
-                                            <p class="text-xs font-semibold uppercase tracking-wide text-indigo-100">Status</p>
-                                            <p class="text-lg font-semibold">All systems operational</p>
-                                        </div>
-                                    </div>
-                                    <a href="report.html" class="group inline-flex items-center justify-between rounded-2xl bg-white/90 px-4 py-3 text-sm font-semibold text-slate-900 shadow-lg transition hover:-translate-y-0.5 hover:bg-white" aria-label="Generate a live report">
-                                        <span>Generate a live report</span>
-                                        <span class="rounded-full bg-slate-100 p-2 text-slate-500 transition group-hover:bg-indigo-50 group-hover:text-indigo-600">
-                                            <i class="fas fa-arrow-right" aria-hidden="true"></i>
-                                        </span>
-                                    </a>
-                                </div>
+                        <div class="grid grid-cols-1 gap-4 sm:grid-cols-2">
+                            <div class="rounded-2xl border border-slate-700 bg-slate-800 p-4">
+                                <p class="text-xs font-semibold uppercase tracking-wide text-slate-300">Accounts tracked</p>
+                                <p id="landing-stat-accounts" class="mt-1 text-3xl font-semibold" aria-live="polite">0</p>
+                                <p class="mt-1 text-sm text-slate-300">Current workspace coverage</p>
+                            </div>
+                            <div class="rounded-2xl border border-slate-700 bg-slate-800 p-4">
+                                <p class="text-xs font-semibold uppercase tracking-wide text-slate-300">Transactions recorded</p>
+                                <p id="landing-stat-transactions" class="mt-1 text-3xl font-semibold" aria-live="polite">0</p>
+                                <p class="mt-1 text-sm text-slate-300">Ready for reconciliation checks</p>
+                            </div>
+                            <div class="rounded-2xl border border-slate-700 bg-slate-800 p-4 sm:col-span-2">
+                                <p class="text-xs font-semibold uppercase tracking-wide text-slate-300">Tags available</p>
+                                <p id="landing-stat-tags" class="mt-1 text-3xl font-semibold" aria-live="polite">0</p>
+                                <p class="mt-1 text-sm text-slate-300">Supports consistent categorisation and reporting</p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="mt-6 grid grid-cols-1 gap-4 md:grid-cols-3">
-                    <a href="ai_tags.html" class="group flex items-center justify-between cards cards-snug cards-rounded-xl" aria-label="Tune AI tagging rules">
-                        <div>
-                            <p class="text-xs font-semibold uppercase tracking-wide text-indigo-600">Automation</p>
-                            <p class="mt-1 text-sm text-gray-700">Fine-tune AI tags to keep categories consistent.</p>
-                        </div>
-                        <span class="rounded-full bg-indigo-50 p-3 text-indigo-500 transition group-hover:bg-indigo-100">
-                            <i class="fas fa-magic text-xl" aria-hidden="true"></i>
-                        </span>
-                    </a>
-                    <a href="budgets.html" class="group flex items-center justify-between cards cards-snug cards-rounded-xl" aria-label="Review your budgets">
-                        <div>
-                            <p class="text-xs font-semibold uppercase tracking-wide text-indigo-600">Budgets</p>
-                            <p class="mt-1 text-sm text-gray-700">See which targets are thriving and where to adjust.</p>
-                        </div>
-                        <span class="rounded-full bg-indigo-50 p-3 text-indigo-500 transition group-hover:bg-indigo-100">
-                            <i class="fas fa-bullseye text-xl" aria-hidden="true"></i>
-                        </span>
-                    </a>
-                    <a href="search.html" class="group flex items-center justify-between cards cards-snug cards-rounded-xl" aria-label="Search transactions">
-                        <div>
-                            <p class="text-xs font-semibold uppercase tracking-wide text-indigo-600">Investigation</p>
-                            <p class="mt-1 text-sm text-gray-700">Drill into transactions with powerful filtering.</p>
-                        </div>
-                        <span class="rounded-full bg-indigo-50 p-3 text-indigo-500 transition group-hover:bg-indigo-100">
-                            <i class="fas fa-search text-xl" aria-hidden="true"></i>
-                        </span>
-                    </a>
+                <div class="mt-4 rounded-xl border border-slate-200 bg-white px-4 py-3 shadow-sm">
+                    <ul class="grid grid-cols-1 gap-2 text-sm text-slate-700 sm:grid-cols-3 sm:gap-4">
+                        <li class="inline-flex items-center gap-2"><i class="fas fa-file-alt text-slate-500" aria-hidden="true"></i>Audit-ready reports</li>
+                        <li class="inline-flex items-center gap-2"><i class="fas fa-users-cog text-slate-500" aria-hidden="true"></i>Role-based access</li>
+                        <li class="inline-flex items-center gap-2"><i class="fas fa-lock text-slate-500" aria-hidden="true"></i>2FA enabled</li>
+                    </ul>
                 </div>
                 <p id="version" class="mt-4 text-center text-gray-500">Version: loading...</p>
             </section>
@@ -132,22 +78,22 @@
             <section class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-8 opacity-0 transition-opacity duration-700" data-no-card="true">
                 <div class="cards cards-tight flex flex-col items-center text-center">
                     <i class="fas fa-chart-line fa-6x mb-2 text-indigo-600"></i>
-                    <p class="text-gray-700">Visualise your spending trends with clear charts that highlight where your money goes.</p>
+                    <p class="text-gray-700">View spending trends by period and category with clear chart summaries.</p>
                 </div>
                 <div class="cards cards-tight flex flex-col items-center text-center">
                     <i class="fas fa-piggy-bank fa-6x mb-2 text-indigo-600"></i>
-                    <p class="text-gray-700">Track savings effortlessly to see how your balance grows over time.</p>
+                    <p class="text-gray-700">Monitor savings performance against historical balances.</p>
                 </div>
                 <div class="cards cards-tight flex flex-col items-center text-center">
                     <i class="fas fa-wallet fa-6x mb-2 text-indigo-600"></i>
-                    <p class="text-gray-700">Manage budgets with ease by setting targets and watching your progress.</p>
+                    <p class="text-gray-700">Set budget targets and review variance as transactions post.</p>
                 </div>
             </section>
 
 
             <section class="mt-8 cards cards-roomy opacity-0 transition-opacity duration-700" data-no-card="true">
 
-                <h2 class="text-2xl font-semibold mb-4 text-indigo-700">What You Can Do</h2>
+                <h2 class="text-2xl font-semibold mb-4 text-indigo-700">Core Operational Capabilities</h2>
                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
                     <div class="flex items-start space-x-3">
                         <i class="fas fa-file-upload text-indigo-600 fa-2x"></i>
@@ -183,7 +129,7 @@
                     </div>
                     <div class="flex items-start space-x-3">
                         <i class="fas fa-database text-indigo-600 fa-2x"></i>
-                        <p class="text-gray-700">Back up and restore your data and projects with ease.</p>
+                        <p class="text-gray-700">Back up and restore transaction and project data when required.</p>
                     </div>
                     <div class="flex items-start space-x-3">
                         <i class="fas fa-magic text-indigo-600 fa-2x"></i>
@@ -215,7 +161,7 @@
                     </div>
                     <div class="flex items-start space-x-3">
                         <i class="fas fa-question-circle text-indigo-600 fa-2x"></i>
-                        <p class="text-gray-700">Get help on any page with built-in self-help overlays.</p>
+                        <p class="text-gray-700">Use built-in self-help overlays for page-specific guidance.</p>
                     </div>
                 </div>
             </section>
@@ -255,7 +201,6 @@
 
     <script src="js/scroll_animations.js"></script>
 
-    <script src="js/carousel.js"></script>
     <script src="js/landing_stats.js"></script>
 
   </body>
